feat: note add , display, update

--- a/src/features/SideNav/EditLabel.module.css
+++ b/src/features/SideNav/EditLabel.module.css
@@ -1,15 +1,13 @@
-.modal {
-  margin-top: 10rem;
-
-}
 
 .input {
-    width: 80% !important;
+  width: 80% !important;
 }
 
 .modalBody {
-    display : flex !important;
-    justify-content : space-between !important;
+  display: flex !important;
+  justify-content: space-between !important;
 }
 
-
+.check {
+  cursor: pointer;
+}
